Fix history and notes

--- a/resources/design/desktop/flat/template/appointmentpro/calendar/list.phtml
+++ b/resources/design/desktop/flat/template/appointmentpro/calendar/list.phtml
@@ -2543,7 +2543,7 @@ $minDate = date('d-m-Y', strtotime("-7 days"));
 				booking_status: $('#booking_status').val(),
 				payment_status: $('#payment_status').val(),
 				payment_mode: $('#payment_mode').val(),
-				note: $('#note').val()
+				note: $('#appointment_note').val()
 			};
 
 			console.log('Request data prepared:', requestData);
